src/sass/custom.scss
/* ===================================
Main stylesheet for bencuan.me - v3_2020
Created by Ben Cuan
====================================== */

/* ----------
Imports
------------- */
@use '_mixins';
@use '_colors';
@use '_fonts';
@use '_animations';
@use '_burgers';

/* ----------
Variables
------------- */
$nav-height: 5rem;
$anim-speed: 0.5s;

/* ----------
Global
------------- */

html {
  transition-duration: $anim-speed;
  scroll-behavior: smooth;
}

html,
body {
  width: 100vw;
}

@include mixins.screen("desktop") {
  .container:not(#contact) {
    max-width: 80%;
  }
}

@include mixins.screen("mobile") {
  .no-mobile,
  .no-mobile * {
    display: none;
  }

  * {
    max-width: 100vw;
  }

  .mobile-center {
    text-align: center;
  }

  html,
  body {
    overflow-x: hidden;
  }
}
@include mixins.screen("not-mobile") {
  .mobile-only,
  .mobile-only * {
    display: none;
  }
}

.link {
  font-family: fonts.$europa;
  text-decoration: none;
  color: colors.$highlight !important;
  font-weight: 500;
  position: relative;

  &:hover {
    &::before {
      visibility: visible;
      transform: scaleX(1);
    }
  }

  // Link animation inspired by https://tobiasahlin.com/blog/css-trick-animating-link-underlines/
  &::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: -1px;
    left: 0;
    background-color: colors.$highlight;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.3s ease-in-out 0s;
  }
}

::selection {
  background-color: transparent;
  font-weight: 1000;
  color: colors.$selection;
}

/* ----------
Color classes
------------- */
.github {
  background-color: colors.$github;
}

.linkedin {
  background-color: colors.$linkedin;
}

.resume {
  background-color: colors.$resume;
}

.email {
  background-color: colors.$email;
}

.itch {
  background-color: colors.$itch;
}

.logo-color,
.home-color {
  background-color: colors.$logo;
}

.about-color {
  background-color: colors.$about;
}

.proj-color {
  background-color: colors.$projects;
}

.contact-color {
  background-color: colors.$contact;
}

.gradient2-color {
  background-color: colors.$gradient2;
}

/* ----------
Landing
------------- */

#landing {
  width: 100%;
  overflow: hidden;
  position: relative;
  height: 140%;
  min-height: 1100px;
}

@include mixins.screen("desktop") {
  #landing {
    min-height: 930px;
    height: 100%;
  }
}

.splash-gradient {
  z-index: -1;
  height: 100%;
  width: 100%;

  &:after,
  &:before {
    position: fixed;
    content: "";
    top: 0;
    left: 0;
    width: 400%;
    height: 400%;
    z-index: -1;
    overflow-x: hidden;
  }

  &:after {
    // @include mixins.stepped-radial-gradient(colors.$gradient3, colors.$gradient1);
    background-size: 300%;
    background: radial-gradient(circle, colors.$gradient1, colors.$gradient4);
    animation: landingAnim 15s linear infinite;
  }

  &:before {
    background-color: colors.$gradient3;
  }

  @include mixins.keyframes(landingAnim) {
    25% {
      transform: translateY(-75%);
      filter: hue-rotate(-30deg);
    }

    50% {
      transform: translate(-75%, -75%);
    }

    75% {
      transform: translate(-75%, 0);
      filter: hue-rotate(30deg);
    }

    0%,
    100% {
      transform: translate(0, 0);
      filter: hue-rotate(0deg);
    }
  }
}

.splash-box {
  @include mixins.center;
  width: 80%;
  height: 65%;
  background-color: rgba(255, 255, 255, 0.6);
  border-radius: 10px;
  padding: 2% 2% 5% 5%;
  margin-top: 2%;
  transition: all $anim-speed;

  &:hover {
    transform: scale(1.005) translate(-49.8%, -51%) !important;
    box-shadow: 2px 6px 6px 0px rgba(0, 0, 0, 0.6);
  }
}

@include mixins.screen("not-desktop") {
  .splash-box {
    height: 80%;
    width: 85%;
  }
}

// Landing text styles
.splash-hi {
  margin-top: 5%;
  color: white;
  font-family: fonts.$neue-haas;
  font-weight: 500;
  @include mixins.responsive-text(50, 75, 100);
}

.splash-name {
  color: white;
  font-family: fonts.$neue-haas;
  font-weight: 700;
  @include mixins.responsive-text(100, 150, 225);
  line-height: 0.9;

  background-image: linear-gradient(
    90deg,
    colors.$gradient4,
    colors.$gradient2
  );
  background-clip: text;
  color: transparent;
  background-size: 300%;

  animation: text-animation 10s infinite;
}

.splash-desc {
  color: white;
  font-family: fonts.$neue-haas;
  font-weight: 500;
  padding-top: 2%;
  line-height: 1;
  @include mixins.responsive-text(20, 35, 50);
}

.splash-button-container {
  height: 15%;
  margin-top: 5%;
  width: 70%;
  margin-left: 15%;
  z-index: 15;
}

.mobile-splash-buttons {
  padding-top: 2rem;
}

@include mixins.screen("desktop") {
  .mobile-splash-buttons {
    display: none;
  }
}

@include mixins.screen("tablet") {
  .splash-button-container {
    display: none;
  }
}

.splash-button-col {
  height: 100%;
  text-align: center;
  vertical-align: middle;
}

// Landing buttons
.landing-btn {
  transition: all $anim-speed;
  border-radius: 50%;
  height: 5rem;
  width: 5rem;
  text-align: center;
  z-index: -1;

  &:hover {
    cursor: pointer;

    .fab,
    .fas {
      @include mixins.responsive-text(30, 50, 60);
      transition: transform $anim-speed;
      transform: translateY(-15%);
    }
  }

  .fab,
  .fas {
    color: white;
    transition: transform $anim-speed;
    @include mixins.responsive-text(20, 35, 40);

    @include mixins.screen("desktop") {
      padding-top: 23%;
    }
  }
}

.mobile-landing-btn {
  font-family: fonts.$forma;
  width: 80%;
  color: white;
  border-radius: 50px;
  font-size: 45px;
  margin: 1rem auto;
  padding-top: 0.5rem;
  @include mixins.responsive-text(30, 45, 60);
  i {
    padding: 1rem !important;
    color: white;
  }
}

@include mixins.screen("tablet") {
  .mobile-landing-btn {
    width: 60%;
  }
}
/* ... */

